--- a/html/search.html
+++ b/html/search.html
@@ -19,7 +19,7 @@
                     <li class="li-style">
                         <div id="search-thing">조회기간</div>
                         <div class="date-style">
-                            <input type="date" class="date-form date1"> -
+                            <input type="date" class="date-form"> -
                             <input type="date" class="date-form">
                         </div>
                     </li>
@@ -41,17 +41,17 @@
                 <ul class="ul-style">
                     <li class="li-style">
                         <div id="search-thing">등록지 소속</div>
-                        <input id="search-dept" type="text" class="input-style">
+                        <input id="search-dept" type="text">
                     </li>
                     <li class="li-style">
                         <div id="search-thing">개발부서</div>
-                        <select class="select-style space2">
+                        <select class="select-style">
                             <option>Value</option>
                         </select>
                     </li>
                     <li class="li-style">
                         <div id="search-thing">제목</div>
-                        <input type="text" class="space3">
+                        <input type="text" id="input-style">
                     </li>
                     <div class="btn-box">
                         <button id="search-btn" class="detail-btn search-btn">검색</button>
