--- a/html/mgmt.html
+++ b/html/mgmt.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 부트스트랩 아이콘 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- 부트스트랩 css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- 부트스트랩 js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- 개별 css -->
+    <link href="../css/mgmt.css" rel="stylesheet">
+
 </head>
+
 <body>
     <!-- 헤더 -->
     <div id="header"></div>
-    <!-- 네브 -->
-    <div id="nav"></div>
-    <!-- 사이드바 -->
-    <div id="side-bar"></div>
-    <!-- section -->
-    <div id="section">
-        <!-- 검색창 -->
-        <div id="search">
 
-        </div>
-        <!-- SR목록 -->
-        <div id="sr-list">
-
+    <div id="main-content">
+        <!-- 사이드바 -->
+        <div id="side-bar" class="bg-primary-subtle"></div>
+        <!-- section -->
+        <div id="section">
+            <!-- 검색창 -->
+            <div id="search" class="bg-dark-subtle"></div>
+            <!-- SR목록 -->
+            <div id="sr-list" class="bg-body-secondary"></div>
         </div>
     </div>
 
-
 </body>
+
 </html>
