--- a/html/home.html
+++ b/html/home.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- 개별 css -->
-    <link href="../css/mgmt.css" rel="stylesheet">
+    <link href="../css/home.css" rel="stylesheet">
 
 </head>
 
